# PySpark-Project

./: .gitignore  README.md  create_project.sh  docker-compose.yml  generate_secret.py  main.py  pyproject.toml  requirements.txt  setup.ps1
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: config.py  database.py  file1.py  firstapp.ipynb  main.py  models.py  spark_job.py
