[project]
name = "pyspark-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pyspark>=4.0.0",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
